--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>OpekaLenZooAplication</groupId>
 	<artifactId>OpekaLenZooApplication</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>OpekaLenZooAplication</name>
 	<description> OpekaLenZooAplication </description>
 	<properties>
